# Local-Agentic-Space

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml
.github/workflows/: ci.yml
crates/agentic-core/: Cargo.toml
crates/agentic-core/src/: main.rs
crates/agentic-core/src/ipc/: common.rs  mod.rs  unix.rs  windows.rs
crates/agentic-ipc/: Cargo.toml
crates/agentic-ipc/src/: lib.rs
crates/inference-core/: Cargo.toml
crates/inference-core/src/: lib.rs
crates/llama-backend/: Cargo.toml  build.rs
crates/llama-backend/src/: lib.rs
crates/llama-sys/: Cargo.toml  build.rs
crates/llama-sys/src/: lib.rs
