[workspace]
members = [
    "crates/inference-core",
    "crates/llama-backend",
    "crates/agentic-core",
    "crates/agentic-ipc",
]
resolver = "2"

[workspace.dependencies]
llama-backend = { path = "crates/llama-backend" }
agentic-core = { path = "crates/agentic-core" }
agentic-ipc = { path = "crates/agentic-ipc" }

cmake = "0.1"
bindgen = "0.72.1"
zerocopy = "0.8.42"
tokio = "1.50.0"
